Bug 468026 - Network Interfaces: Refresh button does nothing
Summary: Network Interfaces: Refresh button does nothing
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.27.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-01 09:00 UTC by Oliver Beard
Modified: 2023-04-06 19:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Beard 2023-04-01 09:00:35 UTC
SUMMARY
On the Network Interfaces page, pressing the 'Refresh' button does nothing, even when there is a change to the network configuration.

STEPS TO REPRODUCE
1. Open Network Interfaces
2. Disconnect from the current network
3. Press 'Refresh'

OBSERVED RESULT
No change.

EXPECTED RESULT
The disconnected network would be removed, such that the page is as it is when reloaded.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.27.3
KDE Frameworks Version: 5.104.0
Qt Version: 5.15.8
Comment 1 Harald Sitter 2023-04-06 14:13:05 UTC
Git commit b28ab76c0b036053b05f59464f4389938600c923 by Harald Sitter.
Committed on 06/04/2023 at 14:10.
Pushed by sitter into branch 'master'.

nics: reset model on update

otherwise the views aren't getting refreshed

M  +2    -0    Modules/nics/networkmodel.cpp

https://invent.kde.org/plasma/kinfocenter/commit/b28ab76c0b036053b05f59464f4389938600c923
Comment 2 Harald Sitter 2023-04-06 14:13:13 UTC
Git commit 3c0a6936ed4386cf11af65f69d0438d89b88d830 by Harald Sitter.
Committed on 06/04/2023 at 14:12.
Pushed by sitter into branch 'Plasma/5.27'.

nics: reset model on update

otherwise the views aren't getting refreshed
(cherry picked from commit b28ab76c0b036053b05f59464f4389938600c923)

M  +2    -0    Modules/nics/networkmodel.cpp

https://invent.kde.org/plasma/kinfocenter/commit/3c0a6936ed4386cf11af65f69d0438d89b88d830