nics: reset model on update

otherwise the views aren't getting refreshed

BUG: 468026